# rust-api

./: Cargo.toml  README.md
script/: delete-root.sh  get-root.sh  patch-root.sh  post-root.sh
src/: lib.rs  main.rs
src/modules/: mod.rs  repositories_module.rs  routers_module.rs  services_module.rs
src/repositories/: inquiry_repository.rs  mod.rs
src/router/: mod.rs
src/router/inquiries/: get.rs  post.rs
src/router/root/: get_root.rs
src/service/: mod.rs
src/service/inquiry/: create_inquiry_service.rs  mod.rs  post_inquiry_service.rs
src/util/: error_handler.rs
