[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.86"
serde = "1.0.145"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
tower = { version = "0.4", features = ["full"] }
anyhow = { version = "1.0", default-features = false }